# srcinfo.rs

./: Cargo.toml  README.md
src/: archvec.rs  error.rs  fmt.rs  lib.rs  parse.rs  srcinfo.rs
tests/srcinfo/: arch_in_package  arch_in_package_override  base_field_after_pkgname  comment-1  comment-2  duplicate_pkgbase  empty_override  key_before_pkgbase  no_arch  no_key  no_pkgbase  no_pkgname  no_pkgrel  no_pkgver  no_value  no_value2  pkgname_before_pkgbase  undeclared_arch  undeclared_arch2
tests/srcinfo/good/: abcpp  accel-ppp-vlanmon-dkms-git  aerospike-amc-community  als-controller  alt-git  an  anki-sync-server-git  anoise-community-extension3  ansible-container  anydesk  arc-kde-git  arch_override  archalien-git  aspell6-fa  asterisk  astyle-svn  aurman  aurutils  aurvote  autorandr  avahi-static-services  avbin  awn-extras-applets-git  awx-git  bash-it-git  bazarr-git  bbk-cli-bin  bbswitch-ck  beamer-theme-torino-git  betty  bgrep-git  biosdevname  bitbucket-cli  bitkeeper-bk  bitkeeper-production-bin  bizou  blast+  blender-plugin-yavne  blitz-cppqed-hg  bmpx  (+555 more)
