[package]
name = "srcinfo"
version = "1.1.0"
authors = ["morganamilo <morganamilo@gmail.com>"]
edition = "2021"
description = "A libary for parsing .SRCINFO files"
homepage = "http://github.com/Morganamilo/srcinfo.rs"
repository = "http://github.com/Morganamilo/srcinfo.rs"
documentation = "https://docs.rs/srcinfo"
readme = "README.md"
license = "GPL-3.0"
keywords = ["srcinfo", "pkgbuild", "arch", "makepkg", "aur"]
categories = ["parser-implementations"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
